Add a stub for a mysql adapter to allow for testing for adapter-specific bugs.

--- a/test/database.yml
+++ b/test/database.yml
@@ -1,3 +1,11 @@
+mysql:
+  :adapter: mysql
+  :database: dirty_associations_plugin_test
+  # these need to be changed to match your db settings
+  # :username: 
+  # :password: 
+  # :host: localhost  
+
 sqlite:
   :adapter: sqlite
   :database: <%=  File.join(File.dirname(__FILE__), 'dirty_associations.sqlite.db') %>
